--- a/cart2.html
+++ b/cart2.html
@@ -205,6 +205,7 @@
                 </div>
             </div>
         </div>
+        <div class="container">
         <div id="wrap-login">
             <div class="transp-back-wrap-login"></div>
             <a href="#"><img class="rectangle-arrow" src="img/rectangle9.png" alt="rectangle"></a>
@@ -243,6 +244,7 @@
                 </div>
             </form>
         </div>
+    </div>
     </div>
 
 </body>
