file index.html change

--- a/index.html
+++ b/index.html
@@ -501,6 +501,7 @@
             <p>&#169; 2016 Bookworm. All rights reserved</p>
         </div>
      </div>
+        <div class="container">
         <div id="wrap-login">
             <div class="transp-back-wrap-login"></div>
             <a href="#"><img class="rectangle-arrow" src="img/rectangle9.png" alt="rectangle"></a>
@@ -536,7 +537,7 @@
                 </div>
             </form>
         </div>
-
+        </div>
 
 
 </body>
