--- a/cart2.html
+++ b/cart2.html
@@ -38,11 +38,11 @@
 
                     </form>
                     <td class="width-del-img" width="5%"></td>
-                    <td width="35%" colspan="2">Product</td>
-                    <td width="25%" >Format</td>
-                    <td width="15%">Language</td>
-                    <td width="15%">Quantity</td>
-                    <td width="5%">Price</td>
+                    <td class="width-book-img" width="35%" colspan="2">Product</td>
+                    <td class="width-name-book" width="25%" >Format</td>
+                    <td class="width-hardback" width="15%">Language</td>
+                    <td class="width-language" width="15%">Quantity</td>
+                    <td class="width-price" width="5%">Price</td>
                 </tr>
 
                 <tr class="tr-container">
@@ -54,9 +54,11 @@
                     <td><span class="font-book-size">Hardback, 170x 215 mm</span></td>
                     <td><span class="font-book-size">English</span></td>
                     <td class="quantity-number">
-                        <input class="del" type="button" value="-">
-                        <input type="number" min="1" placeholder="1">
-                        <input class="add" type="button" name="product" value="+">
+                        <form action="" id="quantity">
+                            <input class="del" type="button" value="-">
+                            <input type="number" min="1" placeholder="1">
+                            <input class="add" type="button" name="product" value="+">
+                        </form>
                     </td>
                     <td><span class="font-money">$25</span></td>
                 </tr>
@@ -70,9 +72,11 @@
                     <td><span class="font-book-size">Hardback, 170x 215 mm</span></td>
                     <td><span class="font-book-size">English</span></td>
                     <td class="quantity-number">
-                        <input class="del" type="button" value="-">
-                        <input type="number" min="1" placeholder="1">
-                        <input class="add" type="button" name="product" value="+">
+                        <form action="" id="quantity"">
+                            <input class="del" type="button" value="-">
+                            <input type="number" min="1" placeholder="1">
+                            <input class="add" type="button" name="product" value="+">
+                        </form>
                     </td>
                     <td><span class="font-money">$25</span></td>
                 </tr>
@@ -86,9 +90,11 @@
                     <td><span class="font-book-size">Hardback, 170x 215 mm</span> </td>
                     <td><span class="font-book-size">English</span></td>
                     <td class="quantity-number">
-                        <input class="del" type="button" value="-">
-                        <input type="number" min="1" placeholder="1">
-                        <input class="add" type="button" name="product" value="+">
+                        <form action="" id="quantity">
+                            <input class="del" type="button" value="-">
+                            <input type="number" min="1" placeholder="1">
+                            <input class="add" type="button" name="product" value="+">
+                        </form>
                     </td>
                     <td><span class="font-money">$25</span></td>
                 </tr>
