--- a/index.html
+++ b/index.html
@@ -360,47 +360,53 @@
             <div class="container_button">
                 <a href="#" class="btn">All books</a>
             </div>
-
         </div>
-
     </div> <!-- end container -->
 
     <div class="container">
         <div class="popular_series"><h1>Popular series</h1></div>
         <div class="book_series">
             <div class="popular_book">
-                <img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">
-                <img  class="cover2" src="img/popularseries/angel-and-demon.png" alt="angel-and-demon" width="132" height="205">
-                <img class="cover3" src="img/popularseries/da_vinci.png" alt="da_vinci" width="145" height="225">
-                <!-- <img src="img/best1.png" alt="book" width="216" height="297"> -->
-                <p><span class="book_series_fonts">Intellectual bestseller</span></p>
-                <p><span class="font_slider_sum">20</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"></p>
+                <div class="popular_book_img">
+                    <img class="cover1" src="img/popularseries/brown-book-cover.png" alt="brown-book-cover" width="119" height="185">
+                    <img  class="cover2" src="img/popularseries/angel-and-demon.png" alt="angel-and-demon" width="132" height="205">
+                    <img class="cover3" src="img/popularseries/da_vinci.png" alt="da_vinci" width="145" height="225">
+                </div>
+                <div class="popular-book-text">
+                    <p><span class="book_series_fonts">Intellectual bestseller</span></p>
+                    <p><span class="font_slider_sum">20</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"></p>
+                </div>
             </div>
+
             <div class="popular_book">
                 <img class="cover1" src="img/popularseries/the-old-man.png" alt="the-old-man" width="119" height="185">
                 <img class="cover2" src="img/popularseries/adams.png" alt="adams" width="132" height="205">
                 <img  class="cover3" src="img/popularseries/guintar-method.png" alt="guintar-method" width="146" height="227">
-                <!--<img src="img/horrorlibrary.png" alt="book" width="216" height="297"> -->
-                <p><span class="book_series_fonts">Hobbies</span></p>
-                <p><span class="font_slider_sum">85</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"> </p>
+
+                <div class="popular-book-text">
+                    <p><span class="book_series_fonts">Hobbies</span></p>
+                    <p><span class="font_slider_sum">85</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"> </p>
+                </div>
             </div>
             <div class="popular_book">
                 <img class="cover1" src="img/popularseries/childrens-book-cover1.png" alt="childrens-book-cover1" width="119" height="185">
                 <img class="cover2" src="img/popularseries/hi-kids.png" alt="hi-kids" width="132" height="205">
                 <img class="cover3" src="img/popularseries/childrens-book-cover2.png" alt="childrens-book-cover2" width="146" height="227">
-                <!-- <img src="img/childrensliterature.png" alt="book" width="216" height="297"> -->
-                <p><span class="book_series_fonts">Childrens literature</span></p>
-                <p><span class="font_slider_sum">54</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"> </p>
+                <div class="popular-book-text">
+                    <p><span class="book_series_fonts">Childrens literature</span></p>
+                    <p><span class="font_slider_sum">54</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"> </p>
+                </div>
             </div>
             <div class="popular_book">
                 <img class="cover1" src="img/popularseries/birds-cover.png" alt="birds-cover" width="119" height="185">
                 <img class="cover2" src="img/popularseries/explore.png" alt="explore" width="132" height="205">
                 <img class="cover3" src="img/popularseries/birds.png" alt="birds" width="146" height="227">
-                <!-- <img src="img/nationalgeographic.png" alt="book" width="216" height="297"> -->
-                <p><span class="book_series_fonts">National geographic</span></p>
-                <p><span class="font_slider_sum">21</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"> </p>
+                <div class="popular-book-text">
+                    <p><span class="book_series_fonts">National geographic</span></p>
+                    <p><span class="font_slider_sum">21</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"> </p>
+                </div>
             </div>
-            <div class="clearfix"></div>
+
         </div>
     </div>
     <div class="container">
