--- a/cart.html
+++ b/cart.html
@@ -47,7 +47,7 @@
                     <div class="form-input">
                         <div class="input-text required has-error has-success"><!-- fixme: Стили для валидного и невалидного поля не применяются  -->
                             <input type="text" placeholder="First name" class="form-control" name="firstname" maxlength="100" required >
-                            <div class="help-block">Title cannot be blank</div><!-- fixme: Указать разные подсказви для полей  -->
+                            <div class="help-block">First name cannot be blank</div>
                         </div>
                         <div class="input-text required has-error has-success">
                             <input type="text" placeholder="Last name" name="lastname" maxlength="100" required >
@@ -91,11 +91,8 @@
                             <div class="help-block">State/Providence cannot be blank</div>
                         </div>
                         <div class="input-text has-error has-success ">
-                            <input type="text" name="zip" class="form-block" placeholder="Zip/Postal" pattern="[A-Z,a-z, ]*" maxlength="100"  >
-                            <!-- fixme: Почтовый индекс может содердать и буквы и цифры (в Украине используются цифры) -->
-                            <div class="help-block">Title cannot be blank.</div>
-                            <input type="text" name="zip" class="form-block" placeholder="Zip/Postal" pattern="[0-9]{,5}" maxlength="100"  >
-                            <div class="help-block">Zip/Postal cannot be blank</div>
+                            <input type="text" name="zip" class="form-block" placeholder="Zip/Postal" pattern="[A-Z,a-z,0-9]*" maxlength="100"  >
+                            <div class="help-block">Zip/Postal cannot be blank.</div>
                         </div>
                     </div>
                     <div class="clearfix"></div>
@@ -117,8 +114,7 @@
                     </div>
                     <div class="shipping_right">
                         <div class="create_account">
-                            <input type="checkbox" class="checkbox-create-account" id="checkbox-create">
-                            <!-- fixme: Инпут должен содержать аттрибут name  -->
+                            <input type="checkbox" class="checkbox-create-account" name="create-account" id="checkbox-create">
                             <label for="checkbox-create">Create account for latter use</label>
                         </div>
                     </div>
@@ -171,8 +167,7 @@
                             </div>
                         </div>
                     </form>
-                    <!-- todo -->
-                    <!-- fixme -->
+
                         <div class="proceed-wrap">
                             <div class="proceed-checkbox">
                                 <input type="checkbox" id="checkbox-proceed" class="checkbox-accept" >
@@ -197,11 +192,7 @@
                                     </table>
                                 </div>
                                 <div class="proceed-payment">
-<<<<<<< HEAD
                                     <input type="submit" form="cart" class="btn" value="Proceed to payment">
-=======
-                                    <input type="button" class="btn" value="Proceed to payment"><!-- fixme: Эта кнопка не отправляет форму и не связана с ней.  -->
->>>>>>> 298944d178e0be5ceac88c83e151f096573db0b8
                                 </div>
                                 <div class="clearfix"></div>
                             </div>
