--- a/cart2.html
+++ b/cart2.html
@@ -31,7 +31,7 @@
         <div class="cart-wrap container">
             <h1>Your cart</h1>
             <form action="" id="id-product">
-                <table class="table-cart"><!-- fixme: Нет формы и скрытых инпутов для ID продуктов  -->
+                <table class="table-cart">
                     <tr class="table-header">
                         <td class="del-book"></td>
                         <td class="img-table">Product</td>
@@ -41,7 +41,6 @@
                         <td class="language">Quantity</td>
                         <td class="price">Price</td>
                     </tr>
-
                     <tr class="tr-container">
                         <td class="del-img">
                             <a href="#"><img src="img/rectangle63.png" width="13" height="19" alt="del"></a>
@@ -59,7 +58,6 @@
                         </td>
                         <td class="font-money">$25</td>
                     </tr>
-
                     <tr class="tr-container">
                         <td class="del-img">
                             <a href="#"><img src="img/rectangle63.png" width="13" height="19" alt="del"></a>
@@ -78,7 +76,6 @@
                         </td>
                         <td class="font-money">$25</td>
                     </tr>
-
                     <tr class="tr-container">
                         <td class="del-img">
                             <img src="img/rectangle63.png" width="13" height="19" alt="del">
@@ -115,12 +112,12 @@
                         <div class="proceed-count">
                             <table>
                                 <tr>
-                                    <td><span class="proceed-count-font1">Subtotal</span></td>
-                                    <td> <span class="proceed-count-font2">$25</span></td>
+                                    <td class="proceed-count-font1">Subtotal</td>
+                                    <td class="proceed-count-font2"> $25</td>
                                 </tr>
                                 <tr>
-                                    <td><span class="proceed-count-font3"> Total</span></td>
-                                    <td><span class="proceed-count-font4"> $28.50</span></td>
+                                    <td class="proceed-count-font3">Total</td>
+                                    <td class="proceed-count-font4">$28.50</td>
                                 </tr>
                             </table>
                         </div>
@@ -132,7 +129,7 @@
                 <div class="clearfix"></div>
         </div> <!-- end yourcart -->
 
-        <div class="wrap-footer"><!-- fixme: Футер должен иметь голубой фон на всю ширину окна  -->
+        <div class="wrap-footer">
             <div class="container">
             <nav class="menu_futer">
                 <ul>
@@ -236,9 +233,6 @@
                     </div>
                     <!-- <div class="create-account"> -->
                     <a href="#" class="input-create">Create account<img src="img/rectangle55.png" width="17" height="13" alt="arrow"></a>
-                    <!-- <input type="text" class="input-create" placeholder="Create account">
-                    <button class="arrow-button"><img src="img/rectangle55.png" width="17" height="13" alt="arrow"></button> -->
-                    <!-- </div> -->
                     <div class="hr-form"></div>
                     <div class="inner-login-social">
                         <h3>Sign in with social:</h3>
@@ -246,12 +240,11 @@
                             <a href="#"><img src="img/icons_svg/rectangle57.png" width="10" height="18" alt="facebook"></a>
                             <a href="#"><img src="img/icons_svg/rectangle58.png" width="17" height="14" alt="pinterest"></a>
                             <a href="#"><img src="img/icons_svg/Google.svg" alt="google"></a>
-
                         </div>
                     </div>
                 </form>
             </div>
-    </div>
+        </div>
 
 
 </body>
